@@ -11,6 +11,8 @@ Revelation changelog
 
 	* changed the default launchers
 
+	* added tooltips to launcher preferences
+
 2004-08-23  Erik Grinaker <erikg@codepoet.no>
 
 	* changed the accelerators for adding, editing and removing
